# Code-HUD

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.github/workflows/: release.yml
docs/case-studies/: README.md  vscode-benchmark.md  vscode.md
src/: diff.rs  diff_cli.rs  dispatch.rs  error.rs  git.rs  lib.rs  main.rs  parser.rs  pipeline.rs  references.rs  search.rs  sfc.rs  test_detect.rs  tokens.rs  tree.rs  walk.rs  xrefs.rs
src/agent/: mod.rs  openclaw.rs
src/editor/: mod.rs
src/extractor/: collapse.rs  expand.rs  interface.rs  mod.rs  outline.rs
src/handler/: cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/languages/: cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/output/: json.rs  mod.rs  plain.rs  stats.rs
src/skill/: aider.rs  claude_code.rs  codex.rs  content.rs  cursor.rs  mod.rs  openclaw.rs  opencode.rs  skill_content.md
tests/: compact_test.rs  cpp_test.rs  csharp_test.rs  diff_test.rs  dispatch_tests.rs  display_names_test.rs  doc_comments_test.rs  editor_test.rs  exclude_test.rs  go_test.rs  handler_ts_tests.rs  integration_test.rs  java_test.rs  javascript_test.rs  json_test.rs  kotlin_test.rs  lines_test.rs  list_symbols_test.rs  max_lines_test.rs  max_output_lines_test.rs  outline_edge_cases_test.rs  outline_expand_test.rs  outline_test.rs  passthrough_test.rs  python_test.rs  search_test.rs  sfc_test.rs  signatures_test.rs  skill_test.rs  symbol_not_found_test.rs  typescript_test.rs
tests/fixtures/: DocComments.cs  DocComments.java  DocComments.kt  Sample.java  Sample.kt  component.vue  config.toml  doc_comments.cpp  doc_comments.go  doc_comments.js  doc_comments.py  doc_comments.rs  doc_comments.ts  edge_cases.go  edge_cases.rs  edge_cases.ts  imports_sample.ts  readme.md  sample.env  (+6 more)
(+6 files in other folders)
