[package]
name = "codehud"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Code HUD - A tree-sitter powered code context extractor"
repository = "https://github.com/Tidemarks-AI/Code-HUD"
keywords = ["tree-sitter", "code-analysis", "refactoring", "cli"]
categories = ["command-line-utilities", "development-tools", "parsing"]

[[bin]]
name = "codehud"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
dirs = "6"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ignore = "0.4"
regex = "1"
rayon = "1.10"
globset = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2.182"
tree-sitter-cpp = "0.23"

[dev-dependencies]
tempfile = "3.25.0"
